# beeai-issue-creator

./: .env.example  .gitignore  ARTIFACT_SYSTEM.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-agent.yaml
src/agents/: agent_analyst.py  agent_draft_issue.py  agent_find_duplicates.py  agent_manager.py  agent_orchestrate.py  agent_writer.py  artifact_handoff.py  artifact_middleware.py  server.py  server_instance.py  session_context.py  session_manager.py  simple_think.py  utils.py
src/github_issue_creator/: __init__.py  server.py
src/github_issue_creator/agents/: __init__.py  analyst.py  manager.py  writer.py
src/github_issue_creator/tools/: __init__.py  artifact_handoff.py  github_tools.py
src/github_issue_creator/utils/: __init__.py  artifact_middleware.py  config.py  content.py  exceptions.py
