[project]
name = "beeai-issue-creator"
version = "0.1.0"
readme = "README.md"
authors = [
    {name = "Matous Havlena", email = "havlenma@gmail.com"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "acp-sdk>=0.13.0",
    "beeai-framework>=0.1.36",
    "aiohttp>=3.8.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
    "openinference-instrumentation-beeai>=0.1.6",
]

[project.optional-dependencies]
dev = [
    "watchfiles>=1.0.5",
    "ruff>=0.6.0"
]

[tool.ruff]
line-length = 120
target-version = "py311"

[project.scripts]
server = "agents.server:run"
test = "agents.test:run"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
