[project]
name = "beeai-issue-creator"
version = "0.1.0"
readme = "README.md"
authors = [
    {name = "Matous Havlena", email = "havlenma@gmail.com"}
]
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<4.0"
dependencies = [
    "beeai-framework[beeai-platform]==0.1.58",
    "aiohttp>=3.13.1",
    "mcp>=1.19.0",
    "python-dotenv>=1.2.1",
    "openinference-instrumentation-beeai>=0.1.13",
    "beeai-sdk>=0.3.7"
]

[project.optional-dependencies]
dev = [
    "watchfiles>=1.1.0",
    "ruff>=0.14.2"
]

[tool.ruff]
line-length = 120
target-version = "py311"

[project.scripts]
server = "agents.server:main"
test = "agents.test:run"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
